--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,1 +1,8 @@
-<p>task works!</p>
+<article>
+  <h2>{{task.title}}</h2>
+  <h2>{{task.dueDate}}</h2>
+  <h2>{{task.summary}}</h2>
+  <p class="actions">
+    <button>Conculuir</button>
+  </p>
+</article>
