--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -7,11 +7,13 @@
   </header>
 
   <ul>
-    <li>
-      <app-task />
-      <app-task />
-      <app-task />
-    </li>
+
+      @for (task of selectedUserTasks; track task.id){
+        <li>
+          <app-task [task]="task"></app-task>
+        </li>
+      }
+
   </ul>
 </section>
 
